--- a/app/static/css/pages/booking/booking-base.css
+++ b/app/static/css/pages/booking/booking-base.css
@@ -9,9 +9,9 @@
 }
 
 .accordion-item {
-	border: 1px solid #e0e0e0;
-	border-radius: 8px;
+
 	margin-bottom: 10px;
+	padding: 0 !important;
 }
 
 .accordion-header {
@@ -54,7 +54,7 @@
 }
 
 .accordion-content {
-	padding: 0;
+	border-radius: 8px;
 	background-color: white;
 	max-height: 0;
 	overflow: hidden;
